--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "mine-server"
+name = "copper"
 version = "0.1.0"
 edition = "2021"
 
@@ -9,3 +9,4 @@ serde = {version = "1.0.210", features = ["derive"] }
 serde_json = "1.0.128"
 thiserror = "1.0.64"
 uuid = "1.10.0"
+tokio = { version = "1", features = ["full"] }
